tests/derive_ui/multiple_external_subcommand.stderr
error: `#[command(external_subcommand)] can only be specified once and has already been specified
  --> tests/derive_ui/multiple_external_subcommand.rs:14:15
   |
14 |     #[command(external_subcommand)]
   |               ^^^^^^^^^^^^^^^^^^^
